# clothing-portal

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __main__.py  app.py  auth.py  config.py  create_admin.py  database.py
src/routes/: admin.py  auth.py  groups.py  history.py  manage.py  upload.py
src/services/: queue.py  roblox.py
src/static/: style.css
src/templates/: admin.html  base.html  history.html  login.html  manage.html  upload.html
